Archive2/e9/7965686986032a/output
main.cpp:15:15: error: 'iterator_list' does not name a type
     dog(const iterator_list<int>& vec)
               ^
main.cpp:15:15: error: ISO C++ forbids declaration of 'parameter' with no type [-fpermissive]
main.cpp:15:28: error: expected ',' or '...' before '<' token
     dog(const iterator_list<int>& vec)
                            ^
main.cpp:15:5: error: 'dog::dog(int)' cannot be overloaded
     dog(const iterator_list<int>& vec)
     ^
main.cpp:10:5: error: with 'dog::dog(int)'
     dog(int a)
     ^
main.cpp: In constructor 'dog::dog(int)':
main.cpp:17:17: error: 'vec' was not declared in this scope
         age = *(vec.begin());
                 ^
